re PR middle-end/40015 (Revision 147083 failed gfortran.dg/array_memcpy_4.f90)

2009-05-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40015
	* builtins.c (fold_builtin_memory_op): Do not decay to element
	type if the size matches the whole array.

From-SVN: r147094